--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -51,4 +52,7 @@ dependencies {
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
+
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
