--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.1'
+
+    implementation 'com.google.android.play:core-ktx:1.8.1'
+    implementation 'com.google.android.play:core:1.8.3'
 }
